--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/frontend/index.html"
   },
+  "staticFiles": {
+    "staticPath": "src/frontend/static",
+    "watcherGlob": "**"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/steveberardi/wordbrew.git"
@@ -20,12 +24,15 @@
   "dependencies": {
     "purecss": "^2.0.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "static": "^2.0.0",
+    "style.css": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   }
 }
