--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/steveberardi/wordbrew#readme",
   "dependencies": {
+    "pure": "^2.85.0",
     "purecss": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
