--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "static": "^2.0.0",
-    "style.css": "^1.0.0"
+    "static": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
