--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "^5.1.0",
     "pure": "^2.85.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "static": "^2.0.0"
