--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=server
       - FLASK_RUN_PORT=8000
-    command: flask run --host=0.0.0.0
+    command: sh -c "pip install -r requirements-dev.txt && flask run --host=0.0.0.0"
   
   frontend:
     build: ./frontend
