--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,6 @@ COPY . .
 RUN pip install -r requirements.txt
 
 # Download WordNet database
-RUN python -c "import wn; wn.download('pwn:3.1')"
+RUN python -c "import wn; wn.download('https://storage.googleapis.com/sbref/wn.xml.gz')"
 
 CMD exec gunicorn --bind :8000 --workers 1 --threads 8 --timeout 0 server:app
