--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,16 +3,16 @@ steps:
 # Build Docker container
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 
-          'gcr.io/$PROJECT_ID/wordbrew:$BUILD_ID', './backend']
+          'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend']
 
 # Docker push to Google Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/wordbrew:$BUILD_ID']
+  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA']
 
 # Deploy to Cloud Run
 - name: google/cloud-sdk
   args: ['gcloud', 'run', 'deploy', 'wordbrew-api', 
-          '--image=gcr.io/$PROJECT_ID/wordbrew:$BUILD_ID', 
+          '--image=gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA',
           '--region', 'us-west2', '--platform', 'managed', 
           '--allow-unauthenticated', '--port', '8000']
 
