basic test layout

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,10 @@ RUN pip install -r requirements.txt
 ENV WN_DATA_PATH="/tmp"
 RUN python loadwn.py
 
+FROM base as dev
+RUN pip install -r requirements-dev.txt
+CMD exec gunicorn --bind :8000 --workers 1 --threads 4 --timeout 0 server:app
+
+
+FROM base as prod
 CMD exec gunicorn --bind :8000 --workers 1 --threads 8 --timeout 0 server:app
