--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,8 @@ steps:
 # Build Docker container
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 
-          'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend']
+          'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend',
+          '--target=prod']
 
 # Docker push to Google Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
