--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/app:r
+      - ./backend/src:/app/src:r
     container_name: wordbrew_backend
   
   frontend:
