--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,19 @@
 steps:
-# --- Backend ---
-# Build Docker container
+# --- Build ---
+
+# Backend / Build Docker container
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build-backend'
   args: ['build', '-t', 
           'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend',
           '--target=prod']
 
-# Docker push to Google Artifact Registry
+# Backend / Push container to Google Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
   id: 'push-backend'
   args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA']
 
-# Deploy to Cloud Run
-- name: google/cloud-sdk
-  id: 'deploy-backend'
-  args: ['gcloud', 'run', 'deploy', 'wordbrew-api', 
-          '--image=gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA',
-          '--region', 'us-west2', '--platform', 'managed', 
-          '--allow-unauthenticated', '--port', '8000']
-  waitFor: ['build-frontend']
-
-# --- Frontend ---
-# Install dependencies
+# Frontend / Install dependencies
 - name: node:16.10
   id: 'init-frontend'
   entrypoint: npm
@@ -30,7 +21,7 @@ steps:
   dir: 'frontend/'
   waitFor: ['-']
 
-# Build
+# Frontend / Build
 - name: node:16.10
   id: 'build-frontend'
   entrypoint: npm
@@ -39,13 +30,24 @@ steps:
   - 'WORDBREW_API_URL=${_WORDBREW_API_URL}'
   dir: 'frontend/'
 
-# Sync to storage bucket
+# --- Deploy ---
+
+# Backend / Deploy to Cloud Run
+- name: google/cloud-sdk
+  id: 'deploy-backend'
+  args: ['gcloud', 'run', 'deploy', 'wordbrew-api', 
+          '--image=gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA',
+          '--region', 'us-west2', '--platform', 'managed', 
+          '--allow-unauthenticated', '--port', '8000']
+  waitFor: ['push-backend', 'build-frontend']
+
+# Frontend / Sync to storage bucket
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: gsutil
   args: ['-m', 'rsync', '-r', '-d', './frontend/build', 'gs://${_BUCKET_NAME}']
   waitFor: ['deploy-backend']
 
-# Set no cache on index.html
+# Frontend / Set no cache on index.html
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: gsutil
   args: ['setmeta', '-h', 'Cache-Control:no-store', 'gs://${_BUCKET_NAME}/*.html']
