setmeta in parallel

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -55,12 +55,12 @@ steps:
 # Frontend / Set cache to 1yr on all files
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: gsutil
-  args: ['setmeta', '-h', 'Cache-Control:max-age=31536000', 'gs://${_BUCKET_NAME}/**']
+  args: ['-m', 'setmeta', '-h', 'Cache-Control:max-age=31536000', 'gs://${_BUCKET_NAME}/**']
 
 # Frontend / Set no cache on html files
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: gsutil
-  args: ['setmeta', '-h', 'Cache-Control:no-store', 'gs://${_BUCKET_NAME}/**.html']
+  args: ['-m', 'setmeta', '-h', 'Cache-Control:no-store', 'gs://${_BUCKET_NAME}/**.html']
 
 substitutions:
     _WORDBREW_API_URL: https://wordbrew-api-q35ri6rwla-wl.a.run.app
