--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: ./backend
-      target: dev
+      target: devserver
     ports:
       - "8000:8000"
     volumes:
