copy is more clear

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,26 +4,24 @@ EXPOSE 8000
 
 WORKDIR /app
 
-ADD requirements.txt .
-RUN pip install -r requirements.txt
-
 # Add WordNet data
 ADD ./data/wndb.tar.gz /app/data
 ENV WN_DATA_PATH="/app/data"
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 
 # Copy source code
 COPY ./src /app/src
 
 # Development Base
 FROM base as devbase
-ADD requirements-dev.txt .
+COPY requirements-dev.txt .
 RUN pip install -r requirements-dev.txt
 
 # Lint, Format, Tests
 FROM devbase as test
-RUN flake8 /app/src
-RUN black /app/src --check
-RUN pytest --cov=/app/src --cov-report=term --cov-report=html /app/src
+RUN flake8 /app/src &&  black /app/src --check && pytest --cov=/app/src --cov-report=term --cov-report=html /app/src
 
 # Development Server
 FROM devbase as devserver
