--- a/cloudbuild/test.yml
+++ b/cloudbuild/test.yml
@@ -2,14 +2,14 @@ steps:
 
 # Backend / Build Docker container
 - name: docker:20.10
-  id: 'backend-build-and-test'
+  id: 'backend-test'
   args: ['build', '-t', 
           'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend',
           '--target=test']
 
 # Frontend / Install dependencies
 - name: node:16.10
-  id: 'init-frontend'
+  id: 'frontend-init'
   entrypoint: npm
   args: ['install']
   dir: 'frontend/'
@@ -17,7 +17,7 @@ steps:
 
 # Frontend / Build
 - name: node:16.10
-  id: 'build-frontend'
+  id: 'frontend-build'
   entrypoint: npm
   args: ['run', 'build']
   env:
