--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --host 0.0.0.0 --mode development --stats=minimal",
     "build": "webpack --mode production --stats=minimal",
-    "postbuild": "purgecss --config ./purgecss.config.js",
+    "postbuild": "purgecss --config ./purgecss.config.js"
   },
   "staticFiles": {
     "staticPath": "static",
