--- a/cloudbuild/deploy.yml
+++ b/cloudbuild/deploy.yml
@@ -7,6 +7,8 @@ steps:
   args: ['build', '-t', 
           'gcr.io/$PROJECT_ID/$REPO_NAME:$SHORT_SHA', './backend',
           '--target=prod']
+  env:
+  - 'DOCKER_BUILDKIT=1'
 
 # Backend / Push container to Google Artifact Registry
 - name: docker:20.10
