use exec form for better signal handling

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16.10-buster-slim as base
 
 WORKDIR /app
 
-COPY package*.json .babelrc webpack.config.js /app
+COPY package*.json .babelrc *.config.js /app
 RUN npm install
 
 COPY ./src /app/src
@@ -11,9 +11,9 @@ COPY ./images /app/images
 # Dev
 FROM base as dev
 ENV WORDBREW_API_URL="http://localhost:8000"
-CMD npm start
+CMD ["npm", "start"]
 
 # Prod
 FROM base as prod
 ENV WORDBREW_API_URL="https://wordbrew-api-xizsvrbq4a-wl.a.run.app/"
-CMD npm run build
+CMD ["npm", "run", "build"]
