--- a/cloudbuild/deploy.yml
+++ b/cloudbuild/deploy.yml
@@ -31,6 +31,7 @@ steps:
   env:
   - 'WORDBREW_API_URL=${_WORDBREW_API_URL}'
   dir: 'frontend/'
+  waitFor: ['frontend-init']
 
 # --- Deploy ---
 
