--- a/.gcp/deploy.yml
+++ b/.gcp/deploy.yml
@@ -71,4 +71,4 @@ steps:
 
 substitutions:
     _WORDBREW_API_URL: https://wordbrew-api-q35ri6rwla-wl.a.run.app
-    _BUCKET_NAME: wordbrew.io
+    _BUCKET_NAME: wordbrew.app
